# sysdiag_analyzer

./: .gitignore  LICENSE  MAN.md  README.md  config.toml.example  pyproject.toml
.github/workflows/: python-test.yml
src/sysdiag_analyzer/: config.py  datatypes.py  exporter.py  features.py  llm_analyzer.py  main.py  ml_engine.py  output.py  unit_analyzer.py  utils.py
src/sysdiag_analyzer/modules/: boot.py  dependencies.py  ebpf_monitor.py  health.py  logs.py  resources.py
tests/: test_config.py  test_exporter.py  test_features.py  test_llm_analyzer.py  test_main.py  test_ml_engine.py  test_output.py  test_unit_analyzer.py  test_utils.py
tests/modules/: test_boot.py  test_dependencies.py  test_dependencies_graph.py  test_ebpf_monitor.py  test_health.py  test_logs.py  test_resources.py
